objects/Product2.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID of the record from Source System</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HCSC_State__c</fullName>
        <description>HCSC state the product comes under based on BlueSTAR</description>
        <inlineHelpText>HCSC State the product comes under based on BlueStar</inlineHelpText>
        <label>HCSC State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NM</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_Of_Business__c</fullName>
        <label>Line Of Business (no use)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Medical_Compensation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Medical Compensation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NotSimple__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NotSimple</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_PlanGroup_Ext_Id__c</fullName>
        <label>Parent PlanGroup Ext Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Plan_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Plan Group</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Plan Groups</relationshipLabel>
        <relationshipName>PlanGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlanGroup_Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>PlanGroup Ext Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Group_Level__c</fullName>
        <label>Plan Group Level (no use)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>Captures product category</description>
        <inlineHelpText>required field for plans to flow correctly on BA to BlueSTAR</inlineHelpText>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Family</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>BCC</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Disease Management</fullName>
                </value>
                <value>
                    <fullName>EPO</fullName>
                </value>
                <value>
                    <fullName>Group Govt</fullName>
                </value>
                <value>
                    <fullName>HCA</fullName>
                </value>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>HRA</fullName>
                </value>
                <value>
                    <fullName>IHI</fullName>
                </value>
                <value>
                    <fullName>Nurseline</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>Private Exchange</fullName>
                </value>
                <value>
                    <fullName>Stop Loss</fullName>
                </value>
                <value>
                    <fullName>Traditional</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Dearborn</fullName>
                </value>
                <value>
                    <fullName>Health Advocacy Solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Group (no use)</label>
        <referenceTo>SGR_Product_Group__c</referenceTo>
        <relationshipLabel>Plan Groups</relationshipLabel>
        <relationshipName>PlanGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Indicator__c</fullName>
        <description>This field is used to indicate whether it&apos;s a medical product or dental</description>
        <inlineHelpText>This field is used to indicate whether it&apos;s a medical product or dental</inlineHelpText>
        <label>Product Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>SG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Health Care Management</fullName>
                </value>
                <value>
                    <fullName>Rx</fullName>
                </value>
                <value>
                    <fullName>Dearborn</fullName>
                </value>
                <value>
                    <fullName>Stop Loss</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Simplified_Product__c</fullName>
        <label>Simple Product</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order (no use)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date (no use)</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>Dearborn_Cross_Sell_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Ancillary and other</value>
        </filters>
        <filters>
            <field>Product_Category__c</field>
            <operation>equals</operation>
            <value>Dental,Vision,Dearborn</value>
        </filters>
        <filters>
            <field>HCSC_State__c</field>
            <operation>equals</operation>
            <value>TX</value>
        </filters>
        <label>Dearborn Cross Sell Products</label>
        <sharedTo>
            <role>Dearborn_National</role>
            <role>Dearborn_Sales_and_Account_Executive</role>
            <role>Dearborn_Sales_and_Account_Management</role>
            <role>Dearborn_Sales_and_Account_Management_Leadership</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IL_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Simplified_Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HCSC_State__c</field>
            <operation>equals</operation>
            <value>IL</value>
        </filters>
        <label>IL Products</label>
        <sharedTo>
            <role>AR_Accountant</role>
            <role>AR_Executive_Management</role>
            <role>Accounts_Recievable</role>
            <role>Accounts_Support</role>
            <role>Client_Analytics_and_Consulting</role>
            <role>Clinical_Accounts_Director</role>
            <role>Clinical_Accounts_Support</role>
            <role>Clinical_Accts_Consultant</role>
            <role>Clinical_Accts_Manager</role>
            <role>Clinical_Accts_Senior_Mgr</role>
            <role>Contract_Administration</role>
            <role>Dental_Sr_Underwriter</role>
            <role>Dental_Underwriting</role>
            <role>Dental_Underwriting_Manager</role>
            <role>Dental_Underwriting_Sr_Manager</role>
            <role>Director_Analytics_Consulting</role>
            <role>Director_Public_Affairs_NM</role>
            <role>EPDT_Sales_Support</role>
            <role>Exchange_Management_Executive</role>
            <role>Exchange_Mgmt_Consultant_Analyst</role>
            <role>Executive_Management</role>
            <role>GEMS</role>
            <role>GEMS_Account_Executive</role>
            <role>GEMS_Account_Executive_Manager</role>
            <role>GEMS_Account_Implementer</role>
            <role>GEMS_Account_Implementer_Manager</role>
            <role>GEMS_Account_Specialist</role>
            <role>GEMS_Account_Specialist_Manager</role>
            <role>GEMS_CDHP_Operations</role>
            <role>GEMS_CDHP_Operations_Manager</role>
            <role>GEMS_CDHP_Tax</role>
            <role>GEMS_CDHP_Tax_Manager</role>
            <role>GEMS_Client_Implementation_Consultant_CIC</role>
            <role>GEMS_Client_Implementation_Consultant_CIC_Manager</role>
            <role>GEMS_Client_Service_Specialist</role>
            <role>GEMS_Client_Service_Specialist_Manager</role>
            <role>GEMS_Contract_Specialist</role>
            <role>GEMS_Contract_Specialist_Manager</role>
            <role>GEMS_DTU_Tester</role>
            <role>GEMS_DTU_Tester_Manager</role>
            <role>GEMS_Dental_Benefit_Manager</role>
            <role>GEMS_Dental_Benefit_coder</role>
            <role>GEMS_Dental_Underwriter</role>
            <role>GEMS_Dental_Underwriter_Manager</role>
            <role>GEMS_Enterprise_Electronic_Eligibility</role>
            <role>GEMS_Enterprise_Electronic_Eligibility_Manager</role>
            <role>GEMS_Enterprise_Pharmacy_Support</role>
            <role>GEMS_Enterprise_Pharmacy_Support_Manager</role>
            <role>GEMS_FEAK_Analyst</role>
            <role>GEMS_FEAK_Analyst_Manager</role>
            <role>GEMS_FSU_Claims</role>
            <role>GEMS_FSU_Claims_Manager</role>
            <role>GEMS_FSU_Membership</role>
            <role>GEMS_FSU_Membership_Manager</role>
            <role>GEMS_Marketing_Service_Rep</role>
            <role>GEMS_Marketing_Service_Rep_Manager</role>
            <role>GEMS_Medical_Benefit_Coder</role>
            <role>GEMS_Medical_Benefit_Manager</role>
            <role>GEMS_Medical_Management</role>
            <role>GEMS_Medical_Management_Manager</role>
            <role>GEMS_Medical_Underwriter</role>
            <role>GEMS_Medical_Underwriter_Manager</role>
            <role>GEMS_Pharmacy_Coder</role>
            <role>GEMS_Pharmacy_Manager</role>
            <role>GEMS_SBC_Analyst</role>
            <role>GEMS_SBC_Analyst_Manager</role>
            <role>GEMS_SWAT</role>
            <role>GEMS_SWAT_Manager</role>
            <role>GEMS_Sales_Executive</role>
            <role>GEMS_Sales_Executive_Manager</role>
            <role>GEMS_Shared_Accums_Analyst</role>
            <role>GEMS_Shared_Accums_Analyst_Manager</role>
            <role>GEMS_Strategic_Account_Executive</role>
            <role>GEMS_Strategic_Account_Executive_Manager</role>
            <role>Group_Benefit_Specialist</role>
            <role>Group_Experience_Team</role>
            <role>HCM_Support</role>
            <role>Health_Care_Management</role>
            <role>IL_AMSR</role>
            <role>IL_Client_Representative</role>
            <role>IL_Director</role>
            <role>IL_Director_Client_Consulting</role>
            <role>IL_Lead_Client_Representative</role>
            <role>IL_Manager_Client_Consulting</role>
            <role>IL_NA_Underwriter</role>
            <role>IL_NA_Underwriting_Consultant</role>
            <role>IL_NA_Underwriting_Manager</role>
            <role>IL_NA_Underwriting_Sr_Dir</role>
            <role>IL_NA_Underwriting_Technical_Services</role>
            <role>IL_Senior_Client_Representative</role>
            <role>IL_Senior_Manager</role>
            <role>IL_Senior_Mgr_Client_Consulting</role>
            <role>IL_Underwriting</role>
            <role>IL_Unit_Manager</role>
            <role>Illinois</role>
            <role>Interplan_Management</role>
            <role>LGNA_Enterprise_Executive</role>
            <role>LGNA_Proposal_Mgmt_Executive</role>
            <role>LGNA_Underwriting_Executive</role>
            <role>LG_Advanced_Underwriter_TX</role>
            <role>LG_Assistant_Underwriter_TX</role>
            <role>LG_Underwriter_TX</role>
            <role>LG_Underwriting_Consultant_TX</role>
            <role>LG_Underwriting_Manager_TX</role>
            <role>Legal_Counsel</role>
            <role>Manager_Analytics_Consulting</role>
            <role>Manager_Private_Exchange</role>
            <role>Manager_Proposal_Mgmt</role>
            <role>Manager_Public_Affairs_NM</role>
            <role>Medicare_Group_Sales</role>
            <role>Medicare_Marketing_Service_Rep</role>
            <role>Medicare_Sales_and_Account_Executive</role>
            <role>Mgr_Underwriting_Learn_Dev</role>
            <role>NA_Major_Advanced_Underwriter</role>
            <role>NA_Major_Exec_Dir_Underwriting</role>
            <role>NA_Major_Sr_Mgr_Spec_Underwriting</role>
            <role>NA_Major_Underwriter</role>
            <role>NA_Sr_Underwriter</role>
            <role>NA_Underwriting_Consultant_TX</role>
            <role>Network_Specialist</role>
            <role>OK_Client_Representative</role>
            <role>OK_Director</role>
            <role>OK_Lead_Client_Representative</role>
            <role>OK_Senior_Client_Representative</role>
            <role>OK_Senior_Manager</role>
            <role>OK_Unit_Manager</role>
            <role>Oklahoma</role>
            <role>PG_Community</role>
            <role>Private_Exchange_Consultant_Specialist</role>
            <role>Product_Development</role>
            <role>Product_Development_Consultant</role>
            <role>Proposal_Writer</role>
            <role>Public_Affairs</role>
            <role>Public_Affairs_Consultant_MT</role>
            <role>Public_Affairs_Coordinator_NM</role>
            <role>Public_Affairs_Illinois</role>
            <role>Public_Affairs_Montana</role>
            <role>Public_Affairs_New_Mexico</role>
            <role>Public_Affairs_Oklahoma</role>
            <role>Public_Affairs_Texas</role>
            <role>SG_Assistant_Underwriter_IL</role>
            <role>SG_Underwriting_Manager_IL</role>
            <role>SID_Director</role>
            <role>SID_Manager</role>
            <role>SID_Senior_Mgr</role>
            <role>Senior_Manager_Exchange_Mgmt</role>
            <role>Senior_Manager_Private_Exchange_Mgmt</role>
            <role>Senior_Manager_Product_Dev</role>
            <role>Senior_Manager_Proposal_Mgmt</role>
            <role>Senior_Mgr_Analytics_Consulting</role>
            <role>Small_Group</role>
            <role>Sr_Dir_Underwriting_QA</role>
            <role>Strategic_Information_Delivery</role>
            <role>TX_AMSR</role>
            <role>TX_Client_Representatives</role>
            <role>TX_Director</role>
            <role>TX_Director_Client_Consulting</role>
            <role>TX_LG_Advanced_Underwriter</role>
            <role>TX_LG_Assistant_Underwriter</role>
            <role>TX_LG_Underwriter</role>
            <role>TX_LG_Underwriting_Consultant</role>
            <role>TX_LG_Underwriting_Manager</role>
            <role>TX_LG_Underwriting_Sr_Dir</role>
            <role>TX_Lead_Client_Representative</role>
            <role>TX_Manager_Client_Consulting</role>
            <role>TX_NA_Advanced_Underwriter</role>
            <role>TX_NA_Underwriter</role>
            <role>TX_NA_Underwriting_Sr_Dir</role>
            <role>TX_SG_Underwriter</role>
            <role>TX_SG_Underwriting_Manager</role>
            <role>TX_Senior_Client_Representative</role>
            <role>TX_Senior_Mgr_Client_Consulting</role>
            <role>TX_Sr_Manager</role>
            <role>TX_Underwriting</role>
            <role>TX_Unit_Manager</role>
            <role>Texas</role>
            <role>Underwriting_Performance_Consultant</role>
            <role>Underwriting_QA</role>
            <role>Underwriting_Tech_Analyst</role>
            <role>Wellness_Consultant</role>
            <role>Wellness_Consulting_Director</role>
            <role>Wellness_Consulting_Senior_Manager</role>
            <role>Wellness_Manager</role>
            <role>Wellness_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MT_products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Simplified_Product__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>NotSimple__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Product_Indicator__c</columns>
        <columns>Product_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HCSC_State__c</field>
            <operation>equals</operation>
            <value>MT</value>
        </filters>
        <label>MT products</label>
        <sharedTo>
            <role>AR_Accountant</role>
            <role>AR_Executive_Management</role>
            <role>Accounts_Recievable</role>
            <role>Accounts_Support</role>
            <role>Client_Analytics_and_Consulting</role>
            <role>Clinical_Accounts_Director</role>
            <role>Clinical_Accounts_Support</role>
            <role>Clinical_Accts_Consultant</role>
            <role>Clinical_Accts_Manager</role>
            <role>Clinical_Accts_Senior_Mgr</role>
            <role>Contract_Administration</role>
            <role>Dental_Sr_Underwriter</role>
            <role>Dental_Underwriting</role>
            <role>Dental_Underwriting_Manager</role>
            <role>Dental_Underwriting_Sr_Manager</role>
            <role>Director_Analytics_Consulting</role>
            <role>Director_Public_Affairs_NM</role>
            <role>EPDT_Sales_Support</role>
            <role>Exchange_Management_Executive</role>
            <role>Exchange_Mgmt_Consultant_Analyst</role>
            <role>Executive_Management</role>
            <role>GEMS</role>
            <role>GEMS_Account_Executive</role>
            <role>GEMS_Account_Executive_Manager</role>
            <role>GEMS_Account_Implementer</role>
            <role>GEMS_Account_Implementer_Manager</role>
            <role>GEMS_Account_Specialist</role>
            <role>GEMS_Account_Specialist_Manager</role>
            <role>GEMS_CDHP_Operations</role>
            <role>GEMS_CDHP_Operations_Manager</role>
            <role>GEMS_CDHP_Tax</role>
            <role>GEMS_CDHP_Tax_Manager</role>
            <role>GEMS_Client_Implementation_Consultant_CIC</role>
            <role>GEMS_Client_Implementation_Consultant_CIC_Manager</role>
            <role>GEMS_Client_Service_Specialist</role>
            <role>GEMS_Client_Service_Specialist_Manager</role>
            <role>GEMS_Contract_Specialist</role>
            <role>GEMS_Contract_Specialist_Manager</role>
            <role>GEMS_DTU_Tester</role>
            <role>GEMS_DTU_Tester_Manager</role>
            <role>GEMS_Dental_Benefit_Manager</role>
            <role>GEMS_Dental_Benefit_coder</role>
            <role>GEMS_Dental_Underwriter</role>
            <role>GEMS_Dental_Underwriter_Manager</role>
            <role>GEMS_Enterprise_Electronic_Eligibility</role>
            <role>GEMS_Enterprise_Electronic_Eligibility_Manager</role>
            <role>GEMS_Enterprise_Pharmacy_Support</role>
            <role>GEMS_Enterprise_Pharmacy_Support_Manager</role>
            <role>GEMS_FEAK_Analyst</role>
            <role>GEMS_FEAK_Analyst_Manager</role>
            <role>GEMS_FSU_Claims</role>
            <role>GEMS_FSU_Claims_Manager</role>
            <role>GEMS_FSU_Membership</role>
            <role>GEMS_FSU_Membership_Manager</role>
            <role>GEMS_Marketing_Service_Rep</role>
            <role>GEMS_Marketing_Service_Rep_Manager</role>
            <role>GEMS_Medical_Benefit_Coder</role>
            <role>GEMS_Medical_Benefit_Manager</role>
            <role>GEMS_Medical_Management</role>
            <role>GEMS_Medical_Management_Manager</role>
            <role>GEMS_Medical_Underwriter</role>
            <role>GEMS_Medical_Underwriter_Manager</role>
            <role>GEMS_Pharmacy_Coder</role>
            <role>GEMS_Pharmacy_Manager</role>
            <role>GEMS_SBC_Analyst</role>
            <role>GEMS_SBC_Analyst_Manager</role>
            <role>GEMS_SWAT</role>
            <role>GEMS_SWAT_Manager</role>
            <role>GEMS_Sales_Executive</role>
            <role>GEMS_Sales_Executive_Manager</role>
            <role>GEMS_Shared_Accums_Analyst</role>
            <role>GEMS_Shared_Accums_Analyst_Manager</role>
            <role>GEMS_Strategic_Account_Executive</role>
            <role>GEMS_Strategic_Account_Executive_Manager</role>
            <role>Group_Benefit_Specialist</role>
            <role>Group_Experience_Team</role>
            <role>HCM_Support</role>
            <role>Health_Care_Management</role>
            <role>IL_AMSR</role>
            <role>IL_Client_Representative</role>
            <role>IL_Director</role>
            <role>IL_Director_Client_Consulting</role>
            <role>IL_Lead_Client_Representative</role>
            <role>IL_Manager_Client_Consulting</role>
            <role>IL_NA_Underwriter</role>
            <role>IL_NA_Underwriting_Consultant</role>
            <role>IL_NA_Underwriting_Manager</role>
            <role>IL_NA_Underwriting_Sr_Dir</role>
            <role>IL_NA_Underwriting_Technical_Services</role>
            <role>IL_Senior_Client_Representative</role>
            <role>IL_Senior_Manager</role>
            <role>IL_Senior_Mgr_Client_Consulting</role>
            <role>IL_Underwriting</role>
            <role>IL_Unit_Manager</role>
            <role>Illinois</role>
            <role>Interplan_Management</role>
            <role>LGNA_Enterprise_Executive</role>
            <role>LGNA_Proposal_Mgmt_Executive</role>
            <role>LGNA_Underwriting_Executive</role>
            <role>LG_Advanced_Underwriter_TX</role>
            <role>LG_Assistant_Underwriter_TX</role>
            <role>LG_Underwriter_TX</role>
            <role>LG_Underwriting_Consultant_TX</role>
            <role>LG_Underwriting_Manager_TX</role>
            <role>Legal_Counsel</role>
            <role>Manager_Analytics_Consulting</role>
            <role>Manager_Private_Exchange</role>
            <role>Manager_Proposal_Mgmt</role>
            <role>Manager_Public_Affairs_NM</role>
            <role>Medicare_Group_Sales</role>
            <role>Medicare_Marketing_Service_Rep</role>
            <role>Medicare_Sales_and_Account_Executive</role>
            <role>Mgr_Underwriting_Learn_Dev</role>
            <role>NA_Major_Advanced_Underwriter</role>
            <role>NA_Major_Exec_Dir_Underwriting</role>
            <role>NA_Major_Sr_Mgr_Spec_Underwriting</role>
            <role>NA_Major_Underwriter</role>
            <role>NA_Sr_Underwriter</role>
            <role>NA_Underwriting_Consultant_TX</role>
            <role>Network_Specialist</role>
            <role>OK_Client_Representative</role>
            <role>OK_Director</role>
            <role>OK_Lead_Client_Representative</role>
            <role>OK_Senior_Client_Representative</role>
            <role>OK_Senior_Manager</role>
            <role>OK_Unit_Manager</role>
            <role>Oklahoma</role>
            <role>PG_Community</role>
            <role>Private_Exchange_Consultant_Specialist</role>
            <role>Product_Development</role>
            <role>Product_Development_Consultant</role>
            <role>Proposal_Writer</role>
            <role>Public_Affairs</role>
            <role>Public_Affairs_Consultant_MT</role>
            <role>Public_Affairs_Coordinator_NM</role>
            <role>Public_Affairs_Illinois</role>
            <role>Public_Affairs_Montana</role>
            <role>Public_Affairs_New_Mexico</role>
            <role>Public_Affairs_Oklahoma</role>
            <role>Public_Affairs_Texas</role>
            <role>SG_Assistant_Underwriter_IL</role>
            <role>SG_Underwriting_Manager_IL</role>
            <role>SID_Director</role>
            <role>SID_Manager</role>
            <role>SID_Senior_Mgr</role>
            <role>Senior_Manager_Exchange_Mgmt</role>
            <role>Senior_Manager_Private_Exchange_Mgmt</role>
            <role>Senior_Manager_Product_Dev</role>
            <role>Senior_Manager_Proposal_Mgmt</role>
            <role>Senior_Mgr_Analytics_Consulting</role>
            <role>Small_Group</role>
            <role>Sr_Dir_Underwriting_QA</role>
            <role>Strategic_Information_Delivery</role>
            <role>TX_AMSR</role>
            <role>TX_Client_Representatives</role>
            <role>TX_Director</role>
            <role>TX_Director_Client_Consulting</role>
            <role>TX_LG_Advanced_Underwriter</role>
            <role>TX_LG_Assistant_Underwriter</role>
            <role>TX_LG_Underwriter</role>
            <role>TX_LG_Underwriting_Consultant</role>
            <role>TX_LG_Underwriting_Manager</role>
            <role>TX_LG_Underwriting_Sr_Dir</role>
            <role>TX_Lead_Client_Representative</role>
            <role>TX_Manager_Client_Consulting</role>
            <role>TX_NA_Advanced_Underwriter</role>
            <role>TX_NA_Underwriter</role>
            <role>TX_NA_Underwriting_Sr_Dir</role>
            <role>TX_SG_Underwriter</role>
            <role>TX_SG_Underwriting_Manager</role>
            <role>TX_Senior_Client_Representative</role>
            <role>TX_Senior_Mgr_Client_Consulting</role>
            <role>TX_Sr_Manager</role>
            <role>TX_Underwriting</role>
            <role>TX_Unit_Manager</role>
            <role>Texas</role>
            <role>Underwriting_Performance_Consultant</role>
            <role>Underwriting_QA</role>
            <role>Underwriting_Tech_Analyst</role>
            <role>Wellness_Consultant</role>
            <role>Wellness_Consulting_Director</role>
            <role>Wellness_Consulting_Senior_Manager</role>
            <role>Wellness_Manager</role>
            <role>Wellness_Support</role>
        </sharedTo>
    </listViews>
</CustomObject>